<resources>
    <string name="app_name">WeatherAssignment</string>
    <string name="search">Search</string>
    <string name="today">Today</string>
    <string name="search_city_weather">Search City Weather</string>
    <string name="search_for_a_city">Weather data for the specified location is not available</string>
    <string name="city_error">Please enter city name</string>

    <string name="thermal_sensation">Thermal sensation</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="Icon_weather_descriptor">Current weather icon</string>

    <string name="temperature"> %1$dº</string>
    <string name="city_name">%1$s, %2$s</string>
    <string name="humidity_template"> %1$d%%</string>
    <string name="wind_speed_imperial">%1$d mph</string>
    <string name="wind_speed">%1$d m/s</string>
</resources>