<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/weather_card_background"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_temperature"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/card_text"
            android:textSize="80sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="22" />

       <!-- <TextView
            android:id="@+id/text_temperature"
            style="@style/TextViewHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="84sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="28" />-->

        <TextView
            android:id="@+id/text_label_degree"
            style="@style/TextViewBodyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="\u2103"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/text_temperature"
            app:layout_constraintTop_toTopOf="@+id/text_temperature" />

        <ImageView
            android:id="@+id/currentImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/Icon_weather_descriptor"
            android:scaleX="1.2"
            android:scaleY="1.2"
            tools:srcCompat="@drawable/sunny_day"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_temp_feelsLike"
            app:layout_constraintTop_toBottomOf="@+id/text_temperature" />

        <TextView
            android:id="@+id/text_thermal_sensation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/thermal_sensation"
            android:textColor="@color/card_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_temperature" />

        <TextView
            android:id="@+id/text_temp_feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/card_text"
            app:layout_constraintBottom_toBottomOf="@+id/text_thermal_sensation"
            app:layout_constraintStart_toEndOf="@+id/text_thermal_sensation"
            app:layout_constraintTop_toTopOf="@+id/text_thermal_sensation"
            tools:text="22º" />

        <TextView
            android:id="@+id/text_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/humidity"
            android:textColor="@color/card_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/text_wind_velocity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_thermal_sensation" />

        <TextView
            android:id="@+id/text_humidity_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/card_text"
            app:layout_constraintBottom_toBottomOf="@+id/text_humidity"
            app:layout_constraintStart_toEndOf="@+id/text_humidity"
            app:layout_constraintTop_toTopOf="@+id/text_humidity"
            tools:text="22%" />

        <TextView
            android:id="@+id/text_wind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"
            android:text="@string/wind"
            android:textColor="@color/card_text"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_wind_velocity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:text=""
            android:textSize="18sp"
            android:textColor="@color/card_text"
            app:layout_constraintBottom_toBottomOf="@+id/text_wind"
            app:layout_constraintStart_toEndOf="@+id/text_wind"
            app:layout_constraintTop_toTopOf="@+id/text_wind"
            tools:text="2 m/s" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>